Thu Aug  1 12:14:21 2002  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/templates/gnu.mpd:

          Added $(ACELIB) to the list of ACE_SHLIBS.

Thu Aug  1 11:13:20 2002  Balachandran Natarajan  <bala@cs.wustl.edu>

	* ace/Malloc_Allocator.h:
	* ace/Malloc_Allocator.cpp: Removed the declaration and definition
	  of ACE_Malloc_Stats since they are not needed in this
	  translation unit. 
	
	* ace/Malloc.h:
	* ace/Malloc.cpp: Retained the definition if ACE_Malloc_Stats here
	  (yes, there were two declarations) and added the definition and
	  template instantiation for ACE_Atomic_Op used by
	  ACE_Alloc_Stats. This should fix the erros showing up on the
	  scoreboard explicit template builds which has
	  ACE_HAS_MALLOC_STATS turned on. 

Thu Aug  1 09:08:36 2002  Douglas C. Schmidt  <schmidt@macarena.cs.wustl.edu>

	* ace/Message_Block.h: Made the non-static duplicate() and release()
	  methods virtual so they can be overridden by subclasses.  Thanks
 	  to Brian Raven <brianr@liffe.com> for this suggestion.

Thu Aug 01 15:24:32 UTC 2002  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_Thread_Adapter.h:
          Fixed incorrected doxygen @file command.

Thu Aug 01 14:52:44 UTC 2002  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/fuzz.pl:
          Improved the check for the @file doxygen command. Incomplete file
          names where not detected as error.

Thu Aug  1 07:03:05 2002  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/README:

          Added a bit of background on the tool before plunging into the
          details.

Thu Aug 01 07:59:12 UTC 2002  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Asynch_Acceptor.h:
        * ace/XtReactor.cpp:
        * ace/XtReactor.h:
          Corrected argument names to fix doxygen warnings.

Thu Aug 01 07:34:12 UTC 2002  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-win32-mingw.h: